[gd_scene load_steps=24 format=3 uid="uid://cryaldygx48fa"]

[ext_resource type="Script" path="res://scenes/game_table.gd" id="1_ue63g"]
[ext_resource type="PackedScene" uid="uid://crlsfq4k8cwld" path="res://enemies/enemy.tscn" id="2_4f4xb"]
[ext_resource type="Script" path="res://scenes/ui/hand.gd" id="2_cmgux"]
[ext_resource type="Texture2D" uid="uid://d1u5tqt2h8f41" path="res://assets/bosque-trail.png" id="3_6q30b"]
[ext_resource type="Script" path="res://enemies/enemy_handler.gd" id="4_bvnc7"]
[ext_resource type="Resource" uid="uid://c85e051l1578x" path="res://enemies/spy/spy_enemy.tres" id="5_6fbiy"]
[ext_resource type="Texture2D" uid="uid://0ep870o4iql6" path="res://assets/ui-grid.png" id="5_ads4c"]
[ext_resource type="Script" path="res://scenes/ui/battle_ui.gd" id="6_rg7ft"]
[ext_resource type="Script" path="res://scenes/player_handler.gd" id="7_t6lt2"]
[ext_resource type="PackedScene" uid="uid://7h0jvdjn6qic" path="res://scenes/player.tscn" id="7_txw2l"]
[ext_resource type="PackedScene" uid="uid://dr2o56k61bc2t" path="res://scenes/ui/energy_ui.tscn" id="8_g1wg8"]
[ext_resource type="Resource" uid="uid://bo2k5hhiu37r4" path="res://characters/player/player.tres" id="8_w6sov"]
[ext_resource type="PackedScene" uid="uid://dcn4hskvgsfw7" path="res://scenes/ui/tooltip.tscn" id="10_s1a8w"]
[ext_resource type="PackedScene" uid="uid://dd4vhrh5g6fdr" path="res://scenes/ui/health_ui.tscn" id="12_12l0y"]
[ext_resource type="Theme" uid="uid://d3nt4vpn2j01h" path="res://main_theme.tres" id="13_mcw8m"]
[ext_resource type="Script" path="res://scenes/ui/die_tooltip.gd" id="13_qyf4o"]
[ext_resource type="Texture2D" uid="uid://qtw0hk1q0esv" path="res://assets/ui-background.png" id="13_uwq77"]
[ext_resource type="Texture2D" uid="uid://qr3e1g00ekdx" path="res://assets/button.png" id="14_3gqon"]
[ext_resource type="Script" path="res://scenes/ui/enemy_tooltip.gd" id="14_q47i1"]
[ext_resource type="Texture2D" uid="uid://d0mghxaoywpij" path="res://assets/button_pressed.png" id="15_dhnm8"]
[ext_resource type="Script" path="res://scenes/ui/red_flash.gd" id="18_f42aq"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_vbntx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q263g"]
size = Vector2(1280, 475)

[node name="GameTable" type="Node2D"]
material = SubResource("CanvasItemMaterial_vbntx")
script = ExtResource("1_ue63g")
player_stats = ExtResource("8_w6sov")

[node name="Background" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.733005, 0.733005, 0.733005, 1)
z_index = -1
texture = ExtResource("3_6q30b")
centered = false

[node name="UIBackground" type="TextureRect" parent="."]
z_index = -1
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
texture = ExtResource("13_uwq77")

[node name="TextureRect" type="TextureRect" parent="UIBackground"]
layout_mode = 0
offset_top = 295.0
offset_right = 1280.0
offset_bottom = 674.0
texture = ExtResource("5_ads4c")
expand_mode = 2

[node name="DieDropArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DieDropArea"]
position = Vector2(640, 237)
shape = SubResource("RectangleShape2D_q263g")
debug_color = Color(0, 0.6, 0.701961, 0.176471)

[node name="EnemyHandler" type="Node2D" parent="."]
position = Vector2(434, 3.8147e-06)
scale = Vector2(0.8, 0.8)
script = ExtResource("4_bvnc7")

[node name="Enemy" parent="EnemyHandler" instance=ExtResource("2_4f4xb")]
stats = ExtResource("5_6fbiy")

[node name="Player" parent="." groups=["player"] instance=ExtResource("7_txw2l")]
z_index = 2
position = Vector2(685, 512)
stats = ExtResource("8_w6sov")

[node name="PlayerHandler" type="Node" parent="." node_paths=PackedStringArray("hand")]
script = ExtResource("7_t6lt2")
hand = NodePath("../BattleUI/Hand")

[node name="BattleUI" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("6_rg7ft")

[node name="Hand" type="HBoxContainer" parent="BattleUI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -342.0
offset_top = -174.0
offset_right = 341.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 40
alignment = 1
script = ExtResource("2_cmgux")

[node name="DiceTooltip" parent="BattleUI" instance=ExtResource("10_s1a8w")]
offset_left = -603.0
offset_top = 311.0
offset_right = -269.0
offset_bottom = 468.0
script = ExtResource("13_qyf4o")

[node name="EnemyTooltip" parent="BattleUI" instance=ExtResource("10_s1a8w")]
offset_left = 272.0
offset_top = 22.0
offset_right = 617.0
offset_bottom = 422.0
script = ExtResource("14_q47i1")

[node name="HealthUI" parent="BattleUI" instance=ExtResource("12_12l0y")]
offset_left = 1008.0
offset_top = 596.0
offset_right = 1253.0
offset_bottom = 641.0

[node name="EnergyUI" parent="BattleUI" instance=ExtResource("8_g1wg8")]
offset_left = 1007.0
offset_top = 532.0
offset_right = 1252.0
offset_bottom = 576.0

[node name="EndTurnButton" type="TextureButton" parent="BattleUI"]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 39.0
offset_top = -134.0
offset_right = 231.0
offset_bottom = -86.0
grow_vertical = 0
theme = ExtResource("13_mcw8m")
texture_normal = ExtResource("14_3gqon")
texture_pressed = ExtResource("15_dhnm8")

[node name="Label" type="Label" parent="BattleUI/EndTurnButton"]
layout_mode = 0
offset_left = 9.0
offset_top = 8.0
offset_right = 183.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0.568627, 0.858824, 0.411765, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 27
text = "EXECUTE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RedFlash" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource("18_f42aq")

[node name="ColorRect" type="ColorRect" parent="RedFlash"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.811765, 0.298039, 0.380392, 0)

[node name="Timer" type="Timer" parent="RedFlash"]
wait_time = 0.1
one_shot = true
